--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,53 @@
 /* styles.css */
-
+html {
+    background-color: rgba(0, 0, 0, 0.965);
+}
 body {
     font-family: Arial, sans-serif;
-    color: black;
+    color: white;
     margin: 0;
     padding: 0;
     text-decoration: none;
 }
 
 header {
-    background-color: #777777;
+    
     color: #fff;
     padding: 20px;
     text-align: center;
 }
 
+.header-bg {
+    position: relative; /* Set position to relative to contain the video */
+    overflow: hidden; /* Hide overflow content */
+    color: #fff; /* Text color for better visibility against the video */
+    padding: 20px; /* Add padding for better spacing */
+    text-align: center; /* Center-align text */
+}
+
+.header-bg::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5); /* Add a semi-transparent overlay to improve text readability */
+    z-index: -1; /* Place the overlay behind the content */
+}
+
+.video-bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Cover the entire header with the video */
+    z-index: -2; /* Place the video behind the overlay */
+}
+
 .contact-link {
-    color: #000;
+    color: white;
     text-decoration: none;
     font-size: larger;
 }
@@ -39,7 +70,7 @@ header {
     position: relative; /* Add position relative for absolute positioning */
     overflow: hidden; /* Hide overflow content */
     margin-bottom: 20px;
-    color: #000;
+    color: #fff;
     text-decoration: none;
 }
 
@@ -50,7 +81,7 @@ header {
     left: -10px; /* Adjust left position to add padding */
     width: calc(100% + 20px); /* Add padding to the width */
     height: calc(100% + 20px); /* Add padding to the height */
-    background-color: #65b0f2;
+    background-color: #00ff48b9;
     z-index: -1;
     transition: transform 0.5s ease; /* Transition the transform property */
     transform: scale(0); /* Initially scale down to hide */
@@ -97,7 +128,7 @@ header {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: #fff;
+    background-color: #000000;
     padding: 20px;
     border-radius: 5px;
 }
